# Housing_Chatbot_Khushal

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/: app.py  local_llm.py  models.py  prompt.py  rag_orchestrator.py  reranker.py  twilio_whatsapp.py  whatsapp.py
scraper/: __init__.py  chunker.py  embeddings.py  evaluate_inclusion.py  housing_scrapper.py  index_to_elasticsearch.py  main.py  retriever.py
scraper/data/memories/: debug.json  demo.json  twilio:whatsapp:+919990170852.json
scripts/: expose_backend.sh
tests/: test_rag_pipeline.py
