[project]
name = "housing-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "elasticsearch>=9.4.1",
    "fastapi>=0.138.2",
    "flagembedding>=1.4.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.7",
    "openai>=1.0.0",
    "playwright>=1.61.0",
    "transformers>=4.35.0",
    "huggingface-hub>=0.17.0",
    "torch>=2.1.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.0.0",
    "twilio>=9.10.9",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
